<resources>
    <string name="app_name">Locky</string>
    <string name="access_token">
        pk.eyJ1IjoiZGNhZ3VhMTAiLCJhIjoiY2p0YWs5aXVsMGJ1ZjQ4cnlvbWhyZGFvaSJ9.wOX2Y0SpSZfWoJnPOC8IRg
    </string>

    <string name="title_activity_locky_menu">LockyMenu</string>
    <string name="title_busqueda">Busqueda</string>
    <string name="title_miCasillero">Mis Reservas</string>
    <string name="title_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nCasillero">Casillero ###</string>
    <string name="lCasillero">Parque Placeholder</string>
    <string name="tCasillero">5h 0m</string>
    <string name="pCasillero">$4000</string>

    <string name="selected_item">Selected item:</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- Cosas de Mapbox -->
    <string name="purple_map_style" translatable="false">mapbox://styles/mapbox/cj7bww7is2f4i2rnwyxkzpwu7</string>
    <string name="blue_map_style" translatable="false">mapbox://styles/mapbox/cj7bwwv3caf7l2spgukxm8bwv</string>
    <string name="terminal_map_style" translatable="false">mapbox://styles/mapbox/cj62n87yx3mvi2rp93sfp2w9z</string>
    <string name="map_view">Map view</string>
    <string name="failure_to_load_file">Fallo al cargar el archivo de ubicaciónes. Por favor reinicie la aplicación.
    </string>
    <string name="no_internet_message">Error al dibujar la ruta hasta el lugar seleccionado, por favor intentar más
        tarde.
    </string>
    <string name="failure_to_retrieve">Fallo al dar la ruta de navegación!</string>
    <string name="user_location_permission_explanation">Esta aplicación necesita permisos de ubicación para mostrar su
        funcionalidad.
    </string>
    <string name="user_location_permission_not_granted">Usted no dio permisos de ubicación a la aplicación.</string>


    <!-- Single card -->
    <string name="hours">Horas</string>
    <string name="phone">Teléfono</string>
    <string name="distance">KM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Como_funciona_locky_title">¿Cómo funciona Locky?</string>
    <string name="Como_funciona_locky">Locky es una aplicación móvil para los sistemas operativos iOS y Android la cual permite a los usuarios realizar reservas de casilleros inteligentes. Puedes encontrar casilleros desde la secciónn -Busqueda- del menu principal. En el mapa podras encontrar los lugares que cuentan con reserva de casilleros y acceder a uno de ellos para realizar tu propia reserva.</string>
    <string name="mis_Reservas_title">Acerca de tus reservas</string>
    <string name="mis_Reservas">Las reservas realizadas se encontrarán en la sección -Mis Reservas- del menu principal. Puedes acceder a información de tu reserva y administrar tu casillero. Cuando quieras devolver el casillero, toca el botón devolver casillero desde la reserva. Podras devolver el casillero aun cuando no cuentes con conexión a internet. </string>
    <string name="contactanos_title">¿Tienes problemas? Contáctanos</string>
    <!-- LOGIN FACEBOOK -->
    <string name="facebook_application_id" translatable="false">905861286427182</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb905861286427182</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Loggeate o registrate</string>
    <string name="action_sign_in_short">Loggeate</string>
    <string name="error_invalid_email">El correo es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Los permisos de contacto son necesarios para proveer el auto completar."
    </string>


</resources>
