<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".HowToLocky">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Como_funciona_locky_title" android:textSize="18sp"
                android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:paddingLeft="10dp"
                android:paddingTop="10dp"/>
        <TextView
                android:text="@string/Como_funciona_locky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/comoFuncionaLocky" android:paddingLeft="10dp"
                android:paddingRight="10dp" android:justificationMode="inter_word"/>
        <TextView
                android:text="@string/mis_Reservas_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11" android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark" android:textStyle="bold" android:paddingTop="10dp"
                android:paddingLeft="10dp"/>
        <TextView
                android:text="@string/mis_Reservas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView12" android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        <TextView
                android:text="@string/contactanos_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView15" android:textStyle="bold"
                android:paddingTop="10dp" android:paddingLeft="10dp" android:paddingRight="10dp"
                android:textSize="18sp" android:textColor="@color/colorPrimaryDark"/>
        <Button
                android:text="Contactar"
                android:onClick="contact"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/button2" android:paddingLeft="10dp"
                android:paddingRight="10dp" android:paddingTop="10dp" android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent_neutral"/>
    </LinearLayout>

</FrameLayout>