<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MyLockerFound">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="SONAR"
                android:layout_width="53dp"
                android:layout_height="48dp"
                android:id="@+id/bell"
                android:textColor="@color/TextIcons"
                android:background="@color/colorPrimaryDark"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lugarCasillero"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.635"/>
        <TextView
                android:text="@string/nCasillero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/numeroCasillero"
                android:textSize="30sp"
                android:textColor="@color/primaryText"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintVertical_bias="0.063" android:textAlignment="center"/>
        <TextView
                android:text="@string/lCasillero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lugarCasillero" android:textSize="18sp"
                android:textColor="@color/secondaryText" android:textAlignment="center"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/numeroCasillero"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.164"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                tools:layout_editor_absoluteX="185dp"
                android:id="@+id/linearLayout2"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="66dp" android:gravity="center">
                <TextView
                        android:text="Tiempo Restante:"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:id="@+id/textView8"
                        android:textColor="@color/primaryText" android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.164"
                        app:layout_constraintVertical_bias="0.502"/>
                <TextView
                        android:text="@string/tCasillero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tRestanteCasillero"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.818"
                        app:layout_constraintVertical_bias="0.499"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="62dp" android:gravity="center">
                <TextView
                        android:text="Precio por hora:"
                        android:layout_width="139dp"
                        android:layout_height="24dp"
                        android:textColor="@color/primaryText" android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.164"
                        app:layout_constraintVertical_bias="0.502" android:id="@+id/textView9"/>
                <TextView
                        android:text="@string/pCasillero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/precioTotal"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.818"
                        app:layout_constraintVertical_bias="0.499"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="333dp"
                android:layout_height="211dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.492"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:id="@+id/linearLayout3">
            <Button
                    android:text="SINCRONIZAR"
                    android:layout_width="323dp"
                    android:layout_height="48dp"
                    android:id="@+id/conectar"
                    android:textColor="@color/TextIcons"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.312"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.491"/>
            <Button
                    android:text="BLOQUEAR"
                    android:layout_width="322dp"
                    android:layout_height="48dp"
                    android:id="@+id/abrir"
                    android:textColor="@color/TextIcons"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.312"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.491" android:enabled="false"/>
            <Button
                    android:text="DEVOLVER CASILLERO"
                    android:layout_width="322dp"
                    android:layout_height="33dp"
                    android:id="@+id/devolverCasillero"
                    android:textColor="@color/TextIcons"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.312"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.491" android:layout_weight="1"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>